[SPARK-53814] Use Java `List.of` instead of `Collections.(empty|singleton)List`